--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
         "cors": "^2.8.5",
         "dotenv": "^16.5.0",
         "express": "^5.1.0",
+        "express-session": "^1.18.1",
         "helmet": "^8.1.0",
         "morgan": "^1.10.0",
+        "passport": "^0.7.0",
+        "passport-google-oauth20": "^2.0.0",
         "pg": "^8.16.0",
         "ts-node": "^10.9.2",
         "typescript": "^5.8.3"
@@ -16,7 +19,7 @@
         "node": ">=18"
     },
     "scripts": {
-        "dev:backend": "nodemon --exec node backend/index.js"
+        "dev:backend": "nodemon --exec node --inspect backend/index.js"
     },
     "devDependencies": {
         "@types/cors": "^2.8.18",
