Refactor project structure by removing unused CSS files, updating TypeScript paths, and enhancing Electron window settings for improved performance and maintainability

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -11,7 +11,7 @@
             "Components/*": ["./src/Components/*"],
             "Utils/*": ["./src/Utils/*"],
             "Types/*": ["./src/Types/*"],
-            
+            "Assets/*": ["./src/assets/*"]
         },
 
         /* Bundler mode */
