--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
         "axios": "^1.9.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-router-dom": "^7.6.2",
         "tailwindcss": "^4.1.8",
         "vite-tsconfig-paths": "^5.1.4"
     },
