--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,15 @@
     },
     "dependencies": {
         "@tailwindcss/vite": "^4.1.8",
+        "@tanstack/react-query": "^5.81.2",
         "axios": "^1.9.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^7.6.2",
+        "react-tsparticles": "^2.12.2",
+        "recoil": "^0.7.7",
         "tailwindcss": "^4.1.8",
+        "tsparticles": "^3.8.1",
         "vite-tsconfig-paths": "^5.1.4"
     },
     "devDependencies": {
