--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
         "react-tsparticles": "^2.12.2",
         "recoil": "^0.7.7",
         "tailwindcss": "^4.1.8",
-        "tsparticles": "^3.8.1",
+        "tsparticles": "^2.12.0",
+        "tsparticles-engine": "^2.12.0",
         "vite-tsconfig-paths": "^5.1.4"
     },
     "devDependencies": {
